Fix dark mode emoji

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Emoji&display=swap&text=🏟️⚽🏆󠁧󠁢󠁷󠁬󠁳🐦📍🐝🪵⛏️🔨🤠🐦⛪🗡️󠁧󠁢󠁷󠁬󠁳🏃🦁󠁧󠁢󠁷󠁬󠁳✈️󠁧󠁢󠁷󠁬󠁳🏁🪨🏃󠁧󠁢󠁷󠁬󠁳🦐🧲🐦🪨🧤⛪🏖️🦌⚔️󠁧󠁢󠁷󠁬󠁳😇🪖🦌󠁧󠁢󠁷󠁬󠁳🦭🐦󠁧󠁢󠁷󠁬󠁳󠁧󠁢󠁷󠁬🪖🐯🐂󠁧󠁢󠁷󠁬󠁳🌺󠁧󠁢󠁷󠁬󠁳👶🐦󠁧󠁢󠁷󠁬󠁳✋󠁧󠁢󠁷󠁬󠁳✈️🐶🏖️󠁧󠁢󠁷󠁬󠁳⛵🧲🔴󠁧󠁢󠁷󠁬󠁳🐦🏖️󠁧󠁢󠁷󠁬󠁳🎯⚪󠁧󠁢󠁷󠁬󠁳🏠󠁧󠁢󠁷󠁬󠁳🦫🦅󠁧󠁢󠁷󠁬󠁳👑⚔️󠁧󠁢󠁷󠁬☘️󠁳⭕󠁧󠁢󠁷󠁬󠁳✊😇🦚😇🦅🌎󠁧󠁢󠁷󠁬󠁳✊🏴󠁧󠁢󠁷󠁬󠁳󠁿🙏🏻🍞🎻🇷🇰🪄👦🚪♟️🎓🍷🔫⚓ ");
+@import url("https://fonts.googleapis.com/css?family=Noto+Emoji&display=swap&text=🏟️⚽🏆󠁧󠁢󠁷󠁬󠁳🐦📍🐝🪵⛏️🔨🤠🐦⛪🗡️󠁧󠁢󠁷󠁬󠁳🏃🦁󠁧󠁢󠁷󠁬󠁳✈️󠁧󠁢󠁷󠁬󠁳🏁🪨🏃󠁧󠁢󠁷󠁬󠁳🦐🧲🐦🪨🧤⛪🏖️🦌⚔️󠁧󠁢󠁷󠁬󠁳😇🪖🦌󠁧󠁢󠁷󠁬󠁳🦭🐦󠁧󠁢󠁷󠁬󠁳󠁧󠁢󠁷󠁬🪖🐯🐂󠁧󠁢󠁷󠁬󠁳🌺󠁧󠁢󠁷󠁬󠁳👶🐦󠁧󠁢󠁷󠁬󠁳✋󠁧󠁢󠁷󠁬󠁳✈️🐶🏖️󠁧󠁢󠁷󠁬󠁳⛵🧲🔴󠁧󠁢󠁷󠁬󠁳🐦🏖️󠁧󠁢󠁷󠁬󠁳🎯⚪󠁧󠁢󠁷󠁬󠁳🏠󠁧󠁢󠁷󠁬󠁳🦫🦅󠁧󠁢󠁷󠁬󠁳👑⚔️󠁧󠁢󠁷󠁬☘️󠁳⭕󠁧󠁢󠁷󠁬󠁳✊😇🦚😇🦅🌎󠁧󠁢󠁷󠁬󠁳✊🏴󠁧󠁢󠁷󠁬󠁳󠁿🙏🏻🍞🎻🇷🇰🪄👦🚪♟️🎓🍷🔫⚓🗺️ ");
 
 @import "../../node_modules/@picocss/pico/scss/variables";
 @import "../../node_modules/@picocss/pico/scss/themes/default";
@@ -14,22 +14,33 @@
 @import "../../node_modules/@picocss/pico/scss/layout/grid";
 @import "../../node_modules/@picocss/pico/scss/layout/scroller";
 
-.emoji {
-  font-family: "Noto Emoji", sans-serif;
-  color: #000;
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+  .emoji {
+    font-family: "Noto Emoji", sans-serif;
+    color: #000;
+  }
+}
+
+[data-theme="dark"],
+:root:not([data-theme="light"]) {
+  .emoji {
+    font-family: "Noto Emoji", sans-serif;
+    color: #fff;
+  }
 }
 
 /* Hide unnecessary elements on mobile */
 
-@media(max-width: 576px) {
+@media (max-width: 576px) {
   .is-hidden-mobile {
     display: none;
   }
   nav {
-  span.label {
+    span.label {
       display: none;
     }
-  .emoji {
+    .emoji {
       font-size: 1.25rem;
     }
   }
@@ -40,7 +51,8 @@
     display: none;
   }
   hgroup {
-    h1, h2 {
+    h1,
+    h2 {
       max-width: 100vw;
     }
   }
@@ -49,28 +61,25 @@
   }
 }
 
-
-@media(min-width: 576px) {
+@media (min-width: 576px) {
   section#home {
     grid-column-gap: 2rem;
   }
   div.panel {
     margin-bottom: 2rem;
   }
-    hgroup {
-      h1 {
-        max-width: 66vw;
-      }
-      h2 {
-        max-width: 50vw;
-      }
+  hgroup {
+    h1 {
+      max-width: 66vw;
+    }
+    h2 {
+      max-width: 50vw;
+    }
   }
 }
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
 }
-
-
 
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
@@ -87,7 +96,7 @@
       font-weight: 900;
       text-transform: uppercase;
       line-height: 2.5rem;
-   }
+    }
     h2 {
       margin-top: 1rem;
       font-weight: 700;
@@ -98,7 +107,7 @@
 
 div.container-fluid {
   &:has(nav[aria-label="breadcrumb"]) {
-      background-color: #f0f0f0;
+    background-color: #f0f0f0;
   }
 }
 
@@ -114,7 +123,7 @@ figure {
 }
 
 footer[data-theme="dark"] {
-  background-color: #212121
+  background-color: #212121;
 }
 
 th {
